--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
    <div class="container">
-      <form id="form" method="POST">
+      <form id="form">
          <center>
             <input type="text" id="username" name="a" class="form" placeholder="username" autocomplete="off"
                required><img src="img/reject.png" title="Please fill out this field !">
